2016-13-32      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.3.11
        * README: http://anonymine-demo.oskog97.com:8080/ link removed.

2016-10-21      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.3.10
        * desktop/anonymine.v0.xcf: Gone.
        * Makefile.static:
            - Was still looking for name suggestions...
            - Sections are now clearer.
        * mkdist, Makefile.static: Simplify code now when Windows support is
            gone.

2016-10-20      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.3.9
        * Forgotten Windows stuff, minor style fixes.
    0.3.8
        *: Removed Windows support.  (Going to create that in a different
            repo.)

2016-10-02      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.3.7
        * cursescfg: flag:hex green on black to black on green
        * cygwin-sshd, BUGS: No uninstaller for cygwin-sshd.
    0.3.6
        * cursescfg: New textics
        * anonymine.py, cursescfg: Calculate pair numbers automatically.

2016-09-17      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.3.5
        * anonymine_engine.py (hiscores): Python 2.6 incompatibilities fixed:
            - str.format can't handle empty field names ('{}')
            - str.decode takes no keyword arguments

2016-09-10      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.3.4
        * cursescfg: Use reverse video for the flags to make them more
            distinguishable on monochrome terminals.
        * anonymine_engine.py (hiscores (add_entry)): Failed to set
            display_caption when the player didn't make it to highscores.
        * Makefile.static: Added distclean.

2016-09-07      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.3.3
        * anonymine_engine.py (hiscores (add_entry)): list.index does not
            return None, but raises ValueError. Plus various changes for
            the fix.

2016-08-27      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.3.2